# guitar_music_notes

./: README.md  pyproject.toml
src/: config.py  custom_types.py  main.py  node_detector.py  note_detector_data.py  recorder.py
src/notes_viewer/: viewer.py
src/view/: main_window.py  note.py  viewer.py
src/view/ui/: ui_main_window.py  ui_viewer.py
src/view/ui/static/: main_window.ui  viewer.ui
