[tool.poetry]
name = "guitar-music-notes"
version = "1.1.0"
description = ""
authors = ["'PythBuster' <'pythbuster@gmail.com'>"]
readme = "README.md"
packages = [{include = "guitar_music_notes"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6 = "^6.5.2"
pygame = "^2.5.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"
pylint = "^2.17.5"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
