[tool.black]
exclude = '''
/(
  | __pycache__
  | view/ui
)/
'''

[[tool.mypy.overrides]]
module = "src.view.*"
allow_untyped_defs = true
allow_untyped_calls = true


[tool.poetry]
name = "Guitar Music Notes"
version = "2.1.0"
description = ""
authors = ["'PythBuster' <'pythbuster@gmail.com'>"]
readme = "README.md"
packages = [{include = "guitar_music_notes"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6 = "^6.5.2"
pygame = "^2.5.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"
pylint = "^2.17.5"
mypy = "^1.5.1"
types-toml = "^0.10.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
